# TabbedBoxMaker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  MANIFEST.in  MODERNIZATION_SUMMARY.md  Makefile  README.md  REFACTOR_SUMMARY.md  box-inkex.py  box.bat  box.py  boxmaker-inkex.py  boxmaker.bat  boxmaker.inx  boxmaker.py  cardboard-inkex.py  cardboard.bat  cardboard.inx  cardboard.py  cardboardboxmaker.inx  compare_approaches.py  demo_shapely_refactor.py  detailed_path_comparison.py  integration_example.py  livinghinge.bat  livinghinge.inx  livinghinge.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  schroff-inkex.py  schroff.bat  schroff.inx  schroff.py  schroffmaker.inx  setup.cfg  shapely_refactor_documentation.md  (+4 more)
.github/workflows/: ci.yaml
boxmaker/: cardboard.py  cli.py
tabbedboxmaker/: Generators.py  InkexShapely.py  __about__.py  __init__.py  __init__.py.orig  boxmaker.py  boxmakerSettings.py  cardboard.py  cli.py  enums.py  geometry.py  livinghinge.py  settings.py  shapely_boxmaker.py
tests/: conftest.py  test_boxmaker.py  test_cardboard.py  test_livinghinge.py
